--- a/html/boilerplate.html
+++ b/html/boilerplate.html
@@ -26,8 +26,7 @@
   
   <link rel="canonical" href="https://www.mywebsite.com/page">
 
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><text x='0' y='14'>👓</text></svg>">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/my.webmanifest">
   <meta name="theme-color" content="#FF00FF">
