--- a/html/boilerplate.html
+++ b/html/boilerplate.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
+  <!--
+  Optimum performance order:
+  <meta />
+  <title>
+  preconnect
+  <script async></script>
+  CSS with @imports
+  sync JS
+  sync CSS
+  preload
+  <script defer></script>
+  prefetch / prerender
+  everything else (SEO, icons, open graph)
+  -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
